v1.1 added kick event, and some fixes